--- a/public/404.html
+++ b/public/404.html
@@ -14,6 +14,23 @@
     }
     h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
   </style>
+  <script type="text/javascript">
+    (function () {
+        var timeLeft = 5,
+            cinterval;
+
+        var timeDec = function (){
+            timeLeft--;
+            document.getElementById('countdown').innerHTML = timeLeft;
+            if(timeLeft === 0){
+              clearInterval(cinterval);
+              window.location = "/";
+            }
+        };
+
+        cinterval = setInterval(timeDec, 1000);
+    })();
+  </script>
 </head>
 
 <body>
@@ -21,6 +38,7 @@
   <div class="dialog">
     <h1>The page you were looking for doesn't exist.</h1>
     <p>You may have mistyped the address or the page may have moved.</p>
+    <p>Redirecting in <span id="countdown">5</span></p>
   </div>
 </body>
 </html>
